Report: Changed interfaces to get report details (not only strings); applied to report console; redesigned bug report window (not finished, yet)
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@22201 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: 88f18f026b44a0be82ca5e4045e24a5de7c396f1